@@ -18,7 +18,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -30,20 +29,21 @@ public class NotificationService {
     private final MemberFcmTokenRepository memberFcmTokenRepository;
     private final FcmSendService fcmSendService;
 
-    public void notifyCustomerCouponIssued(Long memberId, @Valid CouponIssuedNotificationPayload payload) {
-        Member member = memberRepository.findById(memberId)
+    public void notifyCustomerCouponIssued(@Valid CouponIssuedNotificationPayload payload) {
+        Member member = memberRepository.findById(payload.memberId())
                 .orElseThrow(() -> new GlobalException(MemberErrorCode.MEMBER_NOT_FOUND));
 
         List<MemberFcmToken> enabledTokens = memberFcmTokenRepository.findByMemberAndNotificationEnabledIsTrue(member);
         if (enabledTokens.isEmpty()) {
-            log.info("푸시 알림이 활성화된 FCM 토큰이 없어 알림을 건너뜁니다. memberId={}", memberId);
+            log.info("푸시 알림이 활성화된 FCM 토큰이 없어 알림을 건너뜁니다. memberId={}", member.getId());
             return;
         }
 
+        // 토큰 중복 제거
         List<String> tokens = enabledTokens.stream()
                 .map(MemberFcmToken::getFcmToken)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         String title = NotificationTemplates.COUPON_ISSUED_TITLE;
         String body = NotificationTemplates.COUPON_ISSUED_BODY.formatted(
@@ -52,10 +52,12 @@ public class NotificationService {
                 payload.expireAt()
         );
 
-        try {
-            fcmSendService.sendNotification(member.getId(), tokens, title, body);
-        } catch (FirebaseMessagingException e) {
-            log.error("{} 전송 중 오류가 발생했습니다. tokens={}, message={}", NotificationType.COUPON_ISSUED, tokens, e.getMessage(), e);
+        for (String token : tokens) {
+            try {
+                fcmSendService.sendNotification(member.getId(), token, title, body);
+            } catch (FirebaseMessagingException e) {
+                log.error("{} 전송 중 오류가 발생했습니다. token={}, message={}", NotificationType.COUPON_ISSUED, token, e.getMessage(), e);
+            }
         }
     }
 }
